local-kubernetes-config/api-2-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-2-service
spec:
  selector:
    app: api-2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-2-deployment
  labels:
    app: api-2
spec:
  replicas: 3
  selector:
    matchLabels:
      app: api-2
  template:
    metadata:
      labels:
        app: api-2
    spec:
      containers:
        - name: kubernetes-api-2
          image: domhall/kubernetes-api-2:latest
          ports:
            - containerPort: 5000
