local-kubernetes-config/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: kubernetes.docker.internal
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
            path: /
